--- a/MyPresenter/Window1.xaml
+++ b/MyPresenter/Window1.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="MyPresenter.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window1" Height="326" Width="349">
+        Title="Window1" Height="326" Width="384">
     <Grid>
-        <StackPanel Margin="0,30,20,30">
-            <TextBox x:Name="TextBox1" Height="255" TextWrapping="Wrap" AcceptsReturn="True" Margin="10,10"/>
+        <StackPanel Margin="10,10,10,10">
+            <TreeView x:Name="tree"
+                        ItemContainerStyle="{StaticResource TreeViewItemStyle}"
+                        ItemsSource="{Binding Mode=OneTime}"
+                        ItemTemplate="{StaticResource CheckBoxItemTemplate}" />
         </StackPanel>
-        <Button Content="Get Spotify" Click="Button_Click" HorizontalAlignment="Right" Width="125" Margin="0,5,206,270"/>
-        <Button Content="Button" HorizontalAlignment="Left" Width="116" Margin="205,5,0,270" Click="Button_Click_1"/>
     </Grid>
 </Window>
